add population counter

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,31 +1,13 @@
-<p id="notice"><%= notice %></p>
+<p style="color: green"><%= notice %></p>
 
 <h1>Countries</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Pop growth</th>
-      <th>Flag</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container">
+  <div class="row">
     <% @countries.each do |country| %>
-      <tr>
-        <td><%= country.name %></td>
-        <td><%= country.pop_growth %></td>
-        <td><%= country.flag %></td>
-        <td><%= link_to 'Show', country %></td>
-        <td><%= link_to 'Edit', edit_country_path(country) %></td>
-        <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="col-4">
+      <%= render country %>
+    </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Country', new_country_path %>
+  </div>
+</div>
